feat: Add functions for create and stop Mdraid

--- a/resources/raid5.ini
+++ b/resources/raid5.ini
@@ -11,5 +11,5 @@ mode = RAID
 rw = write
 
 [raid]
-dev = /dev/sdb, /dev/sdc, /dev/sdd
-number_realization = 5
+dev = /dev/sdb, /dev/sdc
+number_realization = 0
