feat: Generate fio file from config.ini file by user created

--- a/resources/default_spdk.ini
+++ b/resources/default_spdk.ini
@@ -1,5 +1,5 @@
 [global]
-ioengine=libaio
+ioengine=spdk_bdev
 invalidate=1
 ramp_time=5
 size=4K
@@ -7,9 +7,9 @@ runtime = 120
 bs = 4K
 iodepth = 32
 numjobs = 8
-mode = SPDK
 rw = write
 
 [spdk]
 dev = /dev/sdb, /dev/sdc, /dev/sdd
 number_realization = 0
+spdk_json_conf = None
