--- a/resources/test.ini
+++ b/resources/test.ini
@@ -1,9 +1,8 @@
 [global]
+ioengine=libaio
 runtime = 120
 bs = 4K
-iodepth = 32
 numjobs = 8
-mode = write
-type_graph = IOPs
-
-
+rw = read, write
+iodepth = 64
+dev = /dev/sdg
