feat: Implemented drawing from logs and linked all the program logic together

--- a/resources/default_mdadm.ini
+++ b/resources/default_mdadm.ini
@@ -3,12 +3,12 @@ ioengine=libaio
 invalidate=1
 ramp_time=5
 size=4K
-runtime = 120
+runtime = 10
 bs = 4K
-iodepth = 32
-numjobs = 8
+iodepth = 1
+numjobs = 1
 rw = write
 
 [raid]
-dev = /dev/sdb, /dev/sdc
+dev = /dev/sdb, /dev/sdc, /dev/sdd
 number_realization = 0
