--- a/resources/test.ini
+++ b/resources/test.ini
@@ -1,8 +1,8 @@
 [global]
 ioengine=libaio
-runtime = 120
+runtime = 10
 bs = 4K
-numjobs = 8
-rw = read, write
-iodepth = 64
-dev = /dev/sdg
+numjobs = 1
+rw = read
+iodepth = 32
+dev = /dev/sdb
