feat: OMG it's works!

--- a/resources/default_bdev.ini
+++ b/resources/default_bdev.ini
@@ -2,12 +2,12 @@
 ioengine=libaio
 invalidate=1
 ramp_time=5
-size=4K
+size=128G
 iodepth = 32
-numjobs = 1
-runtime = 120
+numjobs = 4
+runtime = 5
 bs = 4K
-rw = write, read
+rw = write
 dev = /dev/sdb
 
 
