--- a/resources/default_mdadm.ini
+++ b/resources/default_mdadm.ini
@@ -1,14 +1,14 @@
 [global]
 ioengine=libaio
 invalidate=1
-ramp_time=5
-size=4K
-runtime = 10
+ramp_time=10
+size=128G
+runtime = 20
 bs = 4K
-iodepth = 1
-numjobs = 1
-rw = write
+iodepth = 32
+numjobs = 8
+rw = read
 
 [raid]
-dev = /dev/sdb, /dev/sdc, /dev/sdd
+dev = /dev/sdb, /dev/sdc, /dev/sdd, /dev/sde, /dev/sdf
 number_realization = 0
