--- a/resources/default_spdk.ini
+++ b/resources/default_spdk.ini
@@ -2,13 +2,13 @@
 ioengine=spdk_bdev
 invalidate=1
 ramp_time=5
-size=4K
-runtime = 10
+size=128G
+runtime = 20
 bs = 4K
-iodepth = 32
+iodepth = 8
 numjobs = 8
 rw = write
 
 [spdk]
-dev = /dev/sdb, /dev/sdc, /dev/sdd
+dev = /dev/sdb, /dev/sdc, /dev/sdd, /dev/sde, /dev/sdf
 number_realization = 0
