feat: Add more information to graph

--- a/resources/default_spdk.ini
+++ b/resources/default_spdk.ini
@@ -8,6 +8,7 @@ bs = 4K
 iodepth = 8
 numjobs = 8
 rw = write
+path_to_spdk_repo=/root/spdk
 
 [spdk]
 dev = /dev/sdb, /dev/sdc, /dev/sdd, /dev/sde, /dev/sdf
