refactor: fix something

--- a/resources/default_mdadm.ini
+++ b/resources/default_mdadm.ini
@@ -1,13 +1,13 @@
 [global]
 ioengine=libaio
 invalidate=1
-ramp_time=10
+ramp_time=30
 size=128G
-runtime = 20
+runtime = 60
 bs = 4K
 iodepth = 32
 numjobs = 8
-rw = read
+rw = write
 
 [raid]
 dev = /dev/sdb, /dev/sdc, /dev/sdd, /dev/sde, /dev/sdf
